--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "April-Korea Community",
+  "name": "April-Korea-Community",
   "version": "1.0.0",
   "description": "April 커뮤니티에 속한 분들의 지식공유 사이트 입니다.",
   "author": "Genn <yoon110@webchemist.net>",
